# toxic_language

./: Dockerfile  Makefile  README.md  app.py  app_inference_spec.py  app_model.py  app_ray_serve.py  app_ray_serve_config.yaml  benchmarks.json  inference_example.json  inferless-runtime.yaml  inferless.yaml  input_schema.py  pyproject.toml  serve  test.py  test_ml_endpoints.py  testendpoint.py  toxic-language-host.py
.github/workflows/: deploy_inference_apps.yaml  ecr_sagemaker_publish.yml  publish_pypy.yml
benchmarks/: data.csv  generate_synth_data.ipynb  test_latency.ipynb
test/: test-validator.py  test_validator.py
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py  test.py
