[project]
name = "toxic_language"
version = "0.0.0"
description = "Validates that the generated text is toxic."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "transformers",
    "nltk",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2"
]